# libmediascan

./: .cirrus.yml  .gitignore  .travis.yml  Makefile.am  Makefile.in  buildme.sh  config.h.in  configure  configure.ac  configure.scan  libtool
bindings/perl/: Makefile.PL  Scan.xs
deplibs/: buildme-latest.sh  libjpeg-turbo-jmorecfg.h.patch  update-config.sh
include/: Makefile.in  libmediascan.h
src/: Makefile.am  Makefile.in  buffer.c  fixed.h  folder_mon_win32.c  mediascan.c  mediascan.h  mediascan_win32.c  mediascan_win32.h  progress.c  thread.c  thread.h  util.c  win32_port.c  win32_port.h  win32config.h
test/: Makefile.in  test.vcxproj  video_dlna_test.vcxproj
test/CUnit/CUnit/Headers/: CUnit.h
win32/: libmediascan.sln  libmediascan.vcxproj  libmediascan.vcxproj.filters
win32/jpeg-8d/: jpeg.vcxproj
win32/libpng/projects/vstudio/libpng/: libpng.vcxproj
win32/libpng/projects/vstudio/pnglibconf/: pnglibconf.vcxproj
win32/libpng/projects/vstudio/pngstest/: pngstest.vcxproj
win32/libpng/projects/vstudio/pngtest/: pngtest.vcxproj
win32/libpng/projects/vstudio/pngunknown/: pngunknown.vcxproj
win32/libpng/projects/vstudio/pngvalid/: pngvalid.vcxproj
win32/libpng/projects/vstudio/zlib/: zlib.vcxproj
win32/props/: Debug_dll.props  Release.props  Release_DLL.props  common.props  db.props  mingw32.props  mingw64.props  msys32.props  msys64.props  pthreads_debug.props  pthreads_release.props
win32/pthreads/: pthread.sln  pthread.vcxproj  pthread.vcxproj.filters
win32/pthreads_proj/: pthread.sln  pthread.vcxproj  pthread.vcxproj.filters
win32/pthreads_proj/Release/: pthreadVC2.lib  version.res
win32/pthreads_proj/props/: common.props  debug.props  win32.props  win64.props
